deploy/git-k8s/monitoring_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 500M # allow upload to 1GB per request
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
          #    - host: status.speechlab.sg
          #      http:
          #        paths:
          #          - backend:
          #              service:
          #                name: grafana
          #                port:
          #                  number: 80
          #            path: /
          #            pathType: Prefix
    - host: loki.speechlab.sg
      http:
        paths:
          - backend:
              service:
                name: loki
                port:
                  number: 3100
            path: /
            pathType: Prefix
    - host: monitoring.speechlab.sg
      http:
        paths:
          - backend:
              service:
                name: loki-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        #- status.speechlab.sg
        - loki.speechlab.sg
        - monitoring.speechlab.sg
      secretName: monitoring-tls
